Added a new Pattern, dense Added support for rendering different pattern types, with a default Added support for custom properties on patterns
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>